testcases/error/combinational_loop_inst.veryl
module combinational_loop_inst_buf (
    i: input  logic<8>,
    o: output logic<8>,
) {
    assign o = i;
}

module combinational_loop_inst (
    a: input  logic<8>,
    b: output logic<8>,
) {
    var x: logic<8>;
    var y: logic<8>;
    inst u: combinational_loop_inst_buf ( i: x, o: y );
    assign x = y;
    assign b = y;
}
